--- a/celebrations.html
+++ b/celebrations.html
@@ -128,10 +128,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-blue animated slideInDown mb-4"> مشروع إنشاء مجمع طبي متكامل  </h1>
+            <h1 class="display-4 text-blue animated slideInDown mb-4"> الحفل السنوي للجمعية مهندسي البترول والتعدين
+                والغاز احتفالًا بانتصارات أكتوبر </h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page"> مشروعات</li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page"> الاحتفالات</li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#"> الانشطة</a></li>
                     <li class="breadcrumb-item"><a class="text-blue" href="#"> الصفحة الرئيسية</a></li>
 
                 </ol>
@@ -140,59 +142,70 @@
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Medical Complex Start -->
-    <div class="container py-5">
-        <div class="row">
-            <div class="col-lg-6">
-                <img class="img-fluid rounded-3" src="img/images/activte/hospital.jpeg" alt="Image">
+    <!-- Celebrations Start -->
+    <div class="container-xxl py-5" style="background: #F8F8F9;">
+        <div class="container">
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">الاحفالات و الندوات</div>
+                <h4 class="mb-5">
+                    اهم الحفالات و الندوات مع كبار المسؤولين
+                </h4>
             </div>
-            <div class="col-lg-6 mt-4 mt-lg-0">
-                <h2 class="text-primary">مشروع إنشاء مجمع طبي متكامل لخدمة المواطنين ذوي الدخل المحدود </h2>
-                <p class="text-muted py-2">
-                    في خطوة نوعية تهدف إلى دعم الرعاية الصحية وتقديم الخدمات الطبية لشرائح المجتمع الأكثر احتياجاً، تُعلن جمعية مهندسي البترول والتعدين والغاز عن النظر فى انشاء  مشروع مجمع طبي متكامل. يأتي هذا المشروع كجزء من التزام الجمعية بمسؤوليتها المجتمعية وتعزيز جودة الحياة للفئات محدوده الدخل.
-                </p>
-                <h5 class="text-muted"> الخدمات الطبية المتاحة:</h5>
-                <p class="text-muted"> يهدف المجمع الطبي إلى تقديم مجموعة متكاملة من الخدمات الطبية المتخصصة، تشمل: </p>
-                <ul>
-                    <li>الباطنة: للكشف وعلاج الأمراض المزمنة والحادة.</li>
-                    <li>الأطفال: رعاية طبية شاملة للأطفال بجميع أعمارهم.</li>
-                    <li>العظام: لعلاج إصابات العظام وأمراض المفاصل.</li>
-                    <li>المخ والأعصاب: لتوفير خدمات طبية متقدمة في هذا التخصص الحيوي.</li>
-                    <li>الجلدية: للتشخيص والعلاج الفعال لمشكلات الجلد والشعر.</li>
-                    <li>خدمات الأسنان: لتقديم رعاية متكاملة للأسنان.</li>
-                    <li>التحاليل الطبية: إجراء كافة أنواع الفحوصات بدقة وبأحدث التقنيات.</li>
-                </ul>
-
-                <p class="text-muted"> رؤية الجمعية: </p>
-                <p class="text-muted">تؤمن جمعية مهندسي البترول والتعدين والغاز بأهمية تقديم خدمات طبية راقية وبأسعار ميسرة، خصوصاً في ظل التحديات الاقتصادية التي تواجه بعض الفئات. لذلك، صُمم المشروع ليُقدم خدماته بأسعار رمزية أو بشكل مجاني وفقاً لنظام دعم مُخصص للمستفيدين.</p>
-                <div class="row mt-4">
-                    <p class="text-muted"> مزايا المشروع: </p>
-                    <ul>
-                        <li>أحدث التقنيات: تجهيز المجمع بأحدث المعدات الطبية لضمان جودة الخدمات.</li>
-                        <li>كوادر متخصصة: فرق طبية مؤهلة وذات خبرة عالية في مختلف التخصصات.</li>
-                        <li>تسهيل الوصول للخدمات: موقع مركزي يُسهل الوصول إليه من قِبَل المواطنين.</li>
-                        <li>استدامة: توفير نظام دعم مستدام لخدمات الرعاية الصحية منخفضة التكلفة.</li>
-                    </ul>
-                    <p class="text-muted"> أهمية المشروع: </p>
-                    <p class="text-muted">
-                        يشكل المجمع الطبي استجابة مباشرة للحاجة المتزايدة إلى خدمات طبية متخصصة للفئات محدودة الدخل. ويُتوقع أن يُساهم المشروع في تحسين الصحة العامة وتخفيف الأعباء المالية عن كاهل المواطنين، مع ضمان تقديم الرعاية الصحية بجودة تضاهي المستويات العالمية.
-                    </p>
-                    <p class="text-muted"> دعوة للمساهمة: </p>
-                    <p class="text-muted">
-                        تُوجه الجمعية دعوة إلى الجهات والمؤسسات المعنية للمشاركة في دعم هذا المشروع الذي يجسد القيم الإنسانية ويعكس روح التكافل الاجتماعي. كما تدعو كافة أفراد المجتمع للاستفادة من الخدمات التي سيُقدمها المجمع فور افتتاحه.
-                    </p>
-                    <p class="text-muted"> ختاماً: </p>
-                    <p class="text-muted">
-                        يأتي هذا المشروع كجزء من مسيرة جمعية مهندسي البترول والتعدين والغاز نحو بناء مجتمع أكثر صحة وسلامة، ويؤكد التزامنا المستمر بتقديم الخدمات التي تُحدث فرقاً حقيقياً في حياة المواطنين.
-                    </p>
-                 </div>
-              </div>
-          </div>
+            <div class="row g-4 justify-content-center">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+                        <img class="img-fluid mb-4" src="img/images/ehtfalat/d15331e2-ab82-4c3d-810c-6206bf6afe6e.jpg"
+                            alt="">
+                        <h4 class="mb-3"> الحفل السنوي للجمعية احتفالًا بانتصارات أكتوبر </h4>
+                        <p class="mb-4">
+                            أقامت الجمعية المصرية لمهندسي البترول والتعدين والغاز، برئاسة المهندس محمد كمال عليم، حفلها
+                            السنوي في السابع من أكتوبر
+                            2024 بدار الحرس الجمهوري بمصر الجديدة
+                        </p>
+                        <a class="btn btn-outline-primary px-3" href="celebration_oct.html">
+                            اقراءالمزيد
+                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                <i class="fa fa-arrow-left"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+                        <img class="img-fluid mb-4" src="img/images/ehtfalat/f4fbfbe3-4450-4146-a4d3-f7881f4c0b4c.jpg"
+                            alt="">
+                        <h4 class="mb-3">معالى وزير قطاع الاعمال فى حفل نصر اكتوبر</h4>
+                        <p class="mb-4">
+                            حضور معالى وزير قطاع الاعمال فى حفل نصر اكتوبر وكبار مسؤلى الدولة
+                        </p>
+                        <a class="btn btn-outline-primary px-3" href="">
+                            اقراء المزير
+                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                <i class="fa fa-arrow-left"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
+                        <img class="img-fluid mb-4" src="img/images/ehtfalat/3dda58cf-c06e-4fce-b5cf-166fd211b0b5.jpg"
+                            alt="">
+                        <h4 class="mb-3">لقاء مع قناة صدى البلد</h4>
+                        <p class="mb-4">
+                            لقاء مع اعضاء جمعية مهندسى البترول والتعدين والغاز بقناه صدى البلد
+                        </p>
+                        <a class="btn btn-outline-primary px-3" href="">
+                            أقراء المزيد
+                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                                <i class="fa fa-arrow-left"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
-                                
-    <!-- Medical Complex End -->
-
+    </div>
+    <!-- Celebrations End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
@@ -253,8 +266,8 @@
                         &copy; <a href="#">جمعية مهندسى البترول والتعدين والغاز</a>, كل الحقوق محفوظة.
                     </div>
                     <!--  <div class="col-md-6 text-center text-md-end">
-                                    Designed By <a href="#"></a>
-                                </div> -->
+                                        Designed By <a href="#"></a>
+                                    </div> -->
                 </div>
             </div>
         </div>
