--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">الانشطة</a>
                         <div class="dropdown-menu m-0">
                             <a href="#" class="dropdown-item">المؤتمرات</a>
-                            <a href="#" class="dropdown-item">الاحتفالات</a>
+                            <a href="celebrations.html" class="dropdown-item">الاحتفالات</a>
                             <a href="#" class="dropdown-item">الندوات</a>
                         </div>
                     </div>
@@ -425,40 +425,37 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
-                                <small>دار ضيافة</small>
+                                <small>  مشروع إنشاء مجمع طبي متكامل </small>
                             </div>
                             <h5 class="mb-3" style="
                                             background-color: #ededed;
                                             margin: 0px;
                                             padding: 10px;
                                             border-radius: 9px;">
-                                دار ضيافة
+                                انشاء مشروع إنشاء مجمع طبي متكامل لخدمة المواطنين
                             </h5>
-                            <p>
-                            <i class="fa fa-check-circle me-2"></i> إقامة مجانية
-                            <i class="fa fa-check-circle me-2"></i> تقديم الوجبات اليومية
-                            <i class="fa fa-check-circle me-2"></i> إقامة مرافق
-                            </p>
+                            
                             <div class="causes-progress bg-light p-3 pt-2">
                                 <div class="d-flex justify-content-between">
-                                    <p class="text-dark">£10,000 <small class="text-body">الهدف</small></p>
-                                    <p class="text-dark">£9,542 <small class="text-body">تم توفير</small></p>
+                                    <p class="text-dark">£ 1,000,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">£ 0 <small class="text-body">تم توفير</small></p>
                                 </div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                        <span>70%</span>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                                        <span>0%</span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/images/activte/20230215125851.jpg" alt="">
+                            <img class="img-fluid" src="img/images/activte/hospital.jpeg" alt="">
                             <div class="causes-overlay">
-                                <a class="btn btn-outline-primary" href="">
+                                <a class="btn btn-outline-primary" href="medical-complex.html">
                                     اقراء المزيد
                                     <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                         <i class="fa fa-arrow-left"></i>
@@ -627,11 +624,12 @@
                     <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
                         <img class="img-fluid mb-4" src="img/images/ehtfalat/d15331e2-ab82-4c3d-810c-6206bf6afe6e.jpg"
                             alt="">
-                        <h4 class="mb-3">من احتفالات نصر اكتوبر</h4>
+                        <h4 class="mb-3"> الحفل السنوي للجمعية احتفالًا بانتصارات أكتوبر </h4>
                         <p class="mb-4">
-                            مسؤلين من جمعية مهندسى البترول والتعدين والغاز وكبار الدولة
+                        أقامت الجمعية المصرية لمهندسي البترول والتعدين والغاز، برئاسة المهندس محمد كمال عليم، حفلها السنوي في السابع من أكتوبر
+                        2024 بدار الحرس الجمهوري بمصر الجديدة
                         </p>
-                        <a class="btn btn-outline-primary px-3" href="">
+                        <a class="btn btn-outline-primary px-3" href="celebration_oct.html">
                             اقراءالمزيد
                             <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-left"></i>
@@ -745,7 +743,7 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/images/ehtfalat/4adde165-815b-446c-8cdb-6de47ffe2ee8.jpg"
+                            <img class="img-fluid" src="img/images/news/hospital.jpeg"
                                 alt="">
                             <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
                         </div>
