--- a/madinat-alkhayr.html
+++ b/madinat-alkhayr.html
@@ -82,7 +82,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">الانشطة</a>
                         <div class="dropdown-menu m-0">
                             <a href="#" class="dropdown-item">المؤتمرات</a>
-                            <a href="#" class="dropdown-item">الاحتفالات</a>
+                            <a href="celebrations.html" class="dropdown-item">الاحتفالات</a>
                             <a href="#" class="dropdown-item">الندوات</a>
                         </div>
                     </div>
