--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"> من نحن</a>
                         <div class="dropdown-menu m-0">
-                            <a href="#" class="dropdown-item"> مجلس ادارة الجمعية </a>
+                            <a href="ceo.html" class="dropdown-item"> مجلس ادارة الجمعية </a>
                             <a href="#" class="dropdown-item"> نشأة الجمعية</a>
                             <a href="objectives.html" class="dropdown-item">اهداف الجمعية</a>
                         </div>
@@ -752,8 +752,15 @@
                                 <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسؤال الاول </small>
                                 <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <h4 class="mb-3"> مشروع إنشاء مجمع طبي متكامل لخدمة المواطنين </h4>
+                            <p>
+                                في خطوة نوعية تهدف إلى دعم الرعاية الصحية وتقديم الخدمات الطبية لشرائح المجتمع الأكثر احتياجاً، تُعلن جمعية مهندسي
+                                البترول والتعدين والغاز عن النظر فى انشاء مشروع مجمع طبي متكامل. يأتي هذا المشروع كجزء من التزام الجمعية بمسؤوليتها
+                                المجتمعية وتعزيز جودة الحياة للفئات محدوده الدخل,بمسؤوليتها المجتمعية وتعزيز جودة الحياة للفئات محدوده الدخل
+                                الخدمات الطبية المتاحة:
+                                يهدف المجمع الطبي إلى تقديم مجموعة متكاملة من الخدمات الطبية المتخصصة، تشمل:
+                                 العظام / الباطنة / الأطفال / المخ والأعصاب /  الجلدية /  خدمات الأسنان /  التحاليل الطبية
+                            </p>
                             <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
